--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "@google-cloud/datastore": "^7.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "scripts": {
