--- a/Server/package.json
+++ b/Server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@google-cloud/datastore": "^7.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2"
   },
   "scripts": {
