--- a/Server/package.json
+++ b/Server/package.json
@@ -7,7 +7,8 @@
     "@google-cloud/datastore": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
